[package]
name = "polymarket_cate"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
postgres-openssl = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = "0.7"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
